Agregación de htmls y solución a dependencias cíclicas en el código